force-app/main/default/objects/Core_Adoption__c/Core_Adoption__c.object-meta.xml
<CustomObject>
    <description>This table holds core adoption information from the core adoption tool</description>
    <label>Core Adoption Pages</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Core Adoption Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>