force-app/main/default/objects/Core_Adoption__c/fields/Account_Manger__c.field-meta.xml
<CustomField>
    <fullName>Account_Manger__c</fullName>
    <label>Account Manger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>