force-app/main/default/objects/Core_Adoption__c/fields/Account_Password__c.field-meta.xml
<CustomField>
    <fullName>Account_Password__c</fullName>
    <label>Account Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>