force-app/main/default/objects/Core_Adoption__c/fields/Account_User__c.field-meta.xml
<CustomField>
    <fullName>Account_User__c</fullName>
    <label>Account User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>