force-app/main/default/objects/Core_Adoption__c/fields/Delayed_Date__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Date__c</fullName>
    <label>Delayed Date</label>
    <type>Date</type>
</CustomField>