force-app/main/default/objects/Core_Adoption__c/fields/Grade_Range_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Grade_Range_Spanish__c</fullName>
    <label>Grade Range Spanish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>