force-app/main/default/objects/Core_Adoption__c/fields/Hit_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Hit_Expiration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hit Expiration</label>
    <type>Checkbox</type>
</CustomField>