force-app/main/default/objects/Core_Adoption__c/fields/Include_Digital_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Include_Digital_Solutions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Digital Solutions</label>
    <type>Checkbox</type>
</CustomField>