force-app/main/default/objects/Core_Adoption__c/fields/Include_Materials_Secondary_English__c.field-meta.xml
<CustomField>
    <fullName>Include_Materials_Secondary_English__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Materials Secondary English</label>
    <type>Checkbox</type>
</CustomField>