force-app/main/default/objects/Core_Adoption__c/fields/Include_PD__c.field-meta.xml
<CustomField>
    <fullName>Include_PD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include PD</label>
    <type>Checkbox</type>
</CustomField>