force-app/main/default/objects/Core_Adoption__c/fields/Include_School_Resources__c.field-meta.xml
<CustomField>
    <fullName>Include_School_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include School Resources</label>
    <type>Checkbox</type>
</CustomField>