force-app/main/default/objects/Core_Adoption__c/fields/Include_Themes_English__c.field-meta.xml
<CustomField>
    <fullName>Include_Themes_English__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Themes English</label>
    <type>Checkbox</type>
</CustomField>