force-app/main/default/objects/Core_Adoption__c/fields/Include_Videos__c.field-meta.xml
<CustomField>
    <fullName>Include_Videos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Videos</label>
    <type>Checkbox</type>
</CustomField>