force-app/main/default/objects/Core_Adoption__c/fields/Proposal_Id__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Id__c</fullName>
    <label>Proposal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>