force-app/main/default/objects/Core_Adoption__c/fields/School_District__c.field-meta.xml
<CustomField>
    <fullName>School_District__c</fullName>
    <label>School District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>